maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:89: error: unclosed character literal
          case 0 => if (i<getIndication(x+1,y) || getIndication(x+1,y) == '') {setIndication(x+1,y,i)};recursor(x+1,y,i+1);
                                                                          ^JediEscaper:90: error: unclosed character literal
          case 1 => if (i<getIndication(x-1,y) || getIndication(x-1,y) == '') {setIndication(x-1,y,i)};recursor(x-1,y,i+1);
                                                                          ^JediEscaper:91: error: unclosed character literal
          case 2 => if (i<getIndication(x,y+1) || getIndication(x,y+1) == '') {setIndication(x,y+1,i)};recursor(x,y+1,i+1);
                                                                          ^JediEscaper:92: error: unclosed character literal
          case 3 => if (i<getIndication(x,y-1) || getIndication(x,y-1) == '') {setIndication(x,y-1,i)};recursor(x,y-1,i+1);
                                                                          ^JediEscaper:89: error: ')' expected but something found.
          case 0 => if (i<getIndication(x+1,y) || getIndication(x+1,y) == '') {setIndication(x+1,y,i)};recursor(x+1,y,i+1);
                                                                          ^JediEscaper:90: error: ';' expected but something found.
          case 1 => if (i<getIndication(x-1,y) || getIndication(x-1,y) == '') {setIndication(x-1,y,i)};recursor(x-1,y,i+1);
                                                                          ^